# orchestrator

./: .gitignore  ORCHESTRATOR_ARCHITECTURE_GUIDE.md  README.md  TASK_UNIT_LANGGRAPH_NATIVE.md  debug_step.py  pyproject.toml  run_pipeline.py  show_step_state.py  start_oh_server.py
config/: flow.yaml  phases_and_roles.yaml
reference_artifacts/task_framework/: README.md  task_management.en.md  task_template.en.md
squadder_orchestrator/: conditions.py  config.py  graph.py  state.py
squadder_orchestrator/agent_drivers/: __init__.py  base_driver.py  mock_driver.py  openhands_driver.py
squadder_orchestrator/graph_compiler/: __init__.py  edge_evaluators.py  langgraph_builder.py  state_schema.py  yaml_manifest_parser.py
squadder_orchestrator/integrations/: __init__.py  openhands_http_api.py  phase_config_loader.py  prompt_composer.py  tasks_storage.py
squadder_orchestrator/node_implementations/: human_gate.py  status_aggregation.py
squadder_orchestrator/nodes/: builtins.py  merge.py  registry.py  router.py
tests/: conftest.py  mocks.py  test_checkpoint.py  test_flow.py  test_multi_repo_workspace.py  test_openhands_driver.py  test_openhands_http_api.py  test_openhands_runtime.py  test_phase_recovery.py  test_runtime_backends.py  test_show_step_state.py  test_start_oh_server.py  test_task_artifact_guardrails.py  test_task_worktree.py
tools/: conversation_viewer.html  serve_viewer.py
workflow_runtime/agent_drivers/: __init__.py  base_driver.py  direct_llm_driver.py  langchain_tools_driver.py  mock_driver.py  openhands_driver.py  routing_driver.py  (+1 more)
(+61 files in other folders)
